updated bash and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,7 @@
-# Make mouse useful in copy mode
-set-option -g -q mouse on
-
-
-# Start copy mode when scrolling up
-bind -n WheelUpPane copy-mode
-
-# Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
-# (commented out because it disables cursor navigation in vim)
-#set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # Scroll History
 set -g history-limit 30000
