--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,5 @@
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g mouse on
+
 
 # Scroll History
 set -g history-limit 30000
